    if the two-parameter power-law kernel is not identifiable.
    
    \item The \code{plot}-type \code{"maps"} for \code{"hhh4"} fits,
    \code{plotHHH4_maps()}, now allows for map-specific color keys
    via \code{zmax = NA} (useful for \code{prop = TRUE}).
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item The \code{nowcast()}-function now also works for
  \code{method="bayes.trunc.ddcp"} method when the number of breakpoints
  is greater than 1. 
  }
}

\subsection{DEPRECATED AND DEFUNCT}{
  \itemize{
    \item The original \code{algo.hhh()} implementation of the HHH
    model has been removed from the package. The function \code{hhh4()}
    provides an improved and much extended implementation since 2012.
  }
}

}


\section{Changes in surveillance version 1.17.3 (2019-12-16)}{

\subsection{BUG FIXES}{
  \itemize{
    \item The \code{head()}-method for \code{"epidataCS"} objects did
    not work with a negative \code{n} argument.

    \item Fix for \code{"matrix"} changes in R-devel.
  }
}

}


\section{Changes in surveillance version 1.17.2 (2019-11-11)}{

\subsection{MINOR CHANGES}{
  \itemize{
    \item For multivariate time series, \code{sts()} now checks for
    mismatches in column names of supplied matrices (\code{observed},
    \code{population}, \code{neighbourhood}, ...). This is to catch
    input where the units (columns) are ordered differently in
    different slots, which would flaw subsequent analyses.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item \code{simulate.twinSIR()} ignored the \code{atRiskY} indicator
    of the underlying \code{"epidata"}, so always assumed a completely
    susceptible population. Initially infectious individuals are now
    inherited. For the previous behaviour, adjust the supplied
    \code{data} via \code{data$atRiskY <- 1}.
  }
}

}


\section{Changes in surveillance version 1.17.1 (2019-09-13)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item New one-parameter power-law kernel \code{siaf.powerlaw1()}